--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ html, body {
     position: absolute;
     right: 30px;
     cursor: pointer;
+    z-index: 1;
+    margin-left: 200px;
+    line-height: 20px;
 }
   
 .menu a {
@@ -60,19 +63,27 @@ html, body {
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: url("https://avatars.githubusercontent.com/u/100360572?v=4");
-    background-size: 100%;
-    background-repeat: no-repeat;
     color: white;
     text-align: center;
     vertical-align: middle;
     line-height: 100vh;
     font-size: 25px;
     user-select: none;
+    overflow: hidden;
+    position: relative;
+}
+
+.banner img {
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .banner h1 {
     margin: 0;
+    max-height: 100%;
 }
 
 /*Down arrow*/
@@ -199,8 +210,8 @@ html, body {
 .show-button {
     width: 100%;
     text-align: center;
-    margin-top: 25px;
-    margin-bottom: 32px;
+    margin-top: 45px;
+    margin-bottom: 55px;
 }
 
 .show-button a {
@@ -228,11 +239,11 @@ html, body {
     padding-bottom: 27px;
     padding-left: 190px;
     padding-right: 190px;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .footer small {
-    font-size: 8px;
+    font-size: 10px;
     margin-left: 5px;
 }
 
@@ -256,4 +267,29 @@ html, body {
 
 .fa-github:hover {
     color: #CECECE;
+}
+
+/*Up scroller*/
+.up-scroller {
+    position: absolute;
+    right: 0;
+    margin-right: 75px;
+    transform: translate(0, 5px);
+    padding: 5px;
+}
+
+.up-scroller:hover {
+    cursor: pointer;
+}
+
+.the-pointer {
+    border-top: 2px solid #354656;
+    border-right: 2px solid #354656;
+    transform: rotate(-45deg);
+    width: 10px;
+    height: 10px;
+}
+
+.up-scroller:hover .the-pointer {
+    border-color: white;
 }
