Fixed up the collection

--- a/style.css
+++ b/style.css
@@ -4,3 +4,8 @@ html, body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
+
+hr {
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
