--- a/globalcss/box.css
+++ b/globalcss/box.css
@@ -1,16 +1,19 @@
-.about-me {
+.box {
     margin-top: 40px;
     margin-bottom: 40px;
     position: relative;
     font-size: 20px;
+    width: 100%;
+    height: 35vw;
 }
 
-.about-me img {
+.box img {
     width: 35vw;
     display: inline-block;
+    position: absolute;
 }
 
-.about-me .text{
+.box .text{
     width: 35vw;
     display: inline-block;
     position: absolute;
@@ -18,9 +21,21 @@
     top: 8vw;
 }
 
-.about-me a {
+.box a {
     display: block;
     margin-top: 8px;
     font-size: 17px;
     color: grey;
+}
+
+.right-box img {
+    right: 0;
+}
+
+.right-box .text {
+    left: 15vw;
+}
+
+.box-in-a-stack {
+    margin-top: 200px;
 }
