--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+hr {
+    margin-top: 4px;
+    margin-bottom: 4px;
+    opacity: 25%;
+}
+
 .collection-section {
     min-height: 100vh;
     width: 100%;
