--- a/globalcss/body.css
+++ b/globalcss/body.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     width: 100%;
+    height: 100%;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
