Added about me text and fixed gregs text

--- a/globalcss/body.css
+++ b/globalcss/body.css
@@ -5,3 +5,7 @@ html, body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
+
+::selection {
+    background-color: #1E284150;
+}
