--- a/globalcss/footer.css
+++ b/globalcss/footer.css
@@ -1,24 +1,20 @@
 .footer {
     background-color: #1E2831;
     color: white;
-    padding-top: 37px;
-    padding-bottom: 27px;
-    padding-left: 190px;
-    padding-right: 190px;
-    font-size: 15px;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 12%;
+    padding-right: 12%;
+    font-size: 1rem;
 }
 
 .footer small {
-    font-size: 10px;
-    margin-left: 5px;
+    font-size: .6rem;
+    margin-left: .15rem;
 }
 
 .socials {
     float: right;
-}
-
-.socials span {
-    margin-right: 1px;
 }
 
 .socials a {
@@ -27,20 +23,16 @@
     display: inline-block;
 }
 
-.fa-twitter:hover {
-    color: #C6F1FF;
-}
-
-.fa-github:hover {
+.socials a:hover {
     color: #CECECE;
 }
 
 .up-scroller {
     position: absolute;
     right: 0;
-    margin-right: 75px;
+    margin-right: 5%;
     transform: translate(0, 5px);
-    padding: 5px;
+    padding: .25rem;
 }
 
 .up-scroller:hover {
@@ -48,24 +40,13 @@
 }
 
 .the-pointer {
-    border-top: 2px solid #354656;
-    border-right: 2px solid #354656;
+    border-top: .125em solid #354656;
+    border-right: .125em solid #354656;
     transform: rotate(-45deg);
-    width: 10px;
-    height: 10px;
+    width: .625em;
+    height: .625em;
 }
 
 .up-scroller:hover .the-pointer {
     border-color: white;
-}
-
-@media screen and (max-width: 900px) {
-    .footer {
-        font-size: 1.65vw;
-        padding-left: 21vw;
-        padding-right: 21vw;
-    }
-    .footer small {
-        font-size: 1.12vw;
-    }
 }
