--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-.title {
+.col-div {
+    min-height: 100%;
+}
+
+.col-title {
     text-align: center;
     font-size: 48px;
     font-weight: 300;
@@ -7,35 +11,36 @@
     padding-bottom: 30px;
 }
 
-.collection {
+.col {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-left: 15rem;
-    margin-right: 15rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
     list-style: none;
     vertical-align: middle;
 }
 
-.collection li {
+.col li {
     margin: .2rem;
-    min-width: 16.1rem;
+    min-width: 30%;
     aspect-ratio: 1 / 1;
     position: relative;
     overflow: hidden;
 }
 
-.collection a {
+.col a {
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
-.collection a:hover {
+.col a:hover {
     cursor: pointer;
 }
 
-.collection img {
+.col img {
     width: 100%;
     height: 100%;
     top: 0;
@@ -43,11 +48,11 @@
     transition: top 300ms ease-in-out;
 }
 
-.collection a:hover img {
+.col a:hover img {
     top: -13px;
 }
 
-.collection h3 {
+.col h3 {
     background-color: #EDF0F3;
     position: absolute;
     width: 100%;
@@ -60,27 +65,6 @@
     margin: 0;
 }
 
-.collection a:hover h3 {
+.col a:hover h3 {
     bottom: 0px;
-}
-
-.show-all-btn {
-    width: 100%;
-    text-align: center;
-}
-
-.show-all-btn a {
-    text-decoration: none;
-    color: white;
-    background-color: #133A96;
-    padding: .3em .5em;
-    border: solid .2em #133A96;
-    border-radius: .3em;
-    font-weight: 500;
-    font-size: 1.1rem;
-}
-
-.show-all-btn a:hover {
-    color: #133A96;
-    background-color: white;
 }
