--- a/globalcss/banner.css
+++ b/globalcss/banner.css
@@ -10,7 +10,7 @@
 }
 
 .banner img {
-    position: absolute;
+    position: fixed;
     left: 0;
     z-index: -1;
     height: 100%;
@@ -26,18 +26,19 @@
     text-align: center;
     z-index: 1;
     user-select: text;
+    font-size: 3vw;
 }
 
 .arrow {
     position: absolute;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 1.2em;
+    height: 1.9em;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
     bottom: 1rem;
-    font-size: 1rem;
+    font-size: 2.2rem;
 }
 
 .arrow:hover {
@@ -47,15 +48,13 @@
 .arrow-down::after,
 .arrow-down::before {
     content: '';
-    display: block;
-    box-sizing: border-box;
     position: absolute;
     bottom: 18%;
 }
 
 .arrow-down::after {
-    width: .625em;
-    height: .625em;
+    width: .425em;
+    height: .425em;
     border-bottom: .125em solid white;
     border-left: .125em solid white;
     transform: rotate(-45deg);
@@ -67,7 +66,7 @@
 
 .arrow-down::before {
     width: .125em;
-    height: 2em;
+    height: 1.4em;
     background: white;
     margin-left: auto;
     margin-right: auto;
@@ -76,6 +75,6 @@
 }
 
 .small-banner {
-    height: 50%;
+    height: 55%;
     font-size: 1.6rem;
 }
