--- a/globalcss/box.css
+++ b/globalcss/box.css
@@ -1,14 +1,14 @@
 .box {
     margin: 2rem 1rem;
     position: relative;
-    font-size: 1.25rem;
+    font-size: 1rem;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
 }
 
 .box img {
-    width: 25rem;
+    width: 35%;
     border-radius: 10px;
     flex: 0 0 35%;
     aspect-ratio: 1 / 1;
@@ -27,4 +27,10 @@
     font-size: 1rem;
     color: grey;
     width: 9ch;
+}
+
+@media only screen and (min-width: 2300px) {
+    .text {
+        font-size: 1.45rem;
+    }
 }
