--- a/globalcss/header.css
+++ b/globalcss/header.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    font-size: 1.25rem;
 }
 
 .name {
@@ -13,30 +14,30 @@
     cursor: pointer;
     z-index: 1;
     text-decoration: none;
-    margin-left: 2rem;
+    margin-left: 2em;
     display: flex;
 }
 
 .name img {
-    width: 1.3rem;
-    height: 1.3rem;
+    width: 1.3em;
+    height: 1.3em;
 }
 
 .name h3 {
     margin: 0;
-    margin-left: .5rem;
-    font-size: 1.25rem;
+    margin-left: .5em;
+    font-size: 1.25em;
 }
 
 .menu {
-    margin-right: 2rem;
+    margin-right: 2em;
     z-index: 1;
 }
   
 .menu a {
-    font-size: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    font-size: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
     text-decoration: none;
     color: white;
     transition: .7s ease;
@@ -48,13 +49,13 @@
     content: '';
     position: absolute;
     background-color: white;
-    height: 2.5px;
+    height: .18em;
     width: 0%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
-    top: 1.25rem;
+    top: 1.25em;
     transition: width 150ms ease-out;
 }
   
