--- a/globalcss/banner.css
+++ b/globalcss/banner.css
@@ -29,30 +29,13 @@
     font-size: 3vw;
 }
 
+.small-banner {
+    height: 55%;
+    font-size: 1.6rem;
+}
+
 .arrow {
     position: absolute;
-    width: 1.2em;
-    height: 1.9em;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    bottom: 1rem;
-    font-size: 2.2rem;
-}
-
-.arrow:hover {
-    cursor: pointer;
-}
-
-.arrow-down::after,
-.arrow-down::before {
-    content: '';
-    position: absolute;
-    bottom: 18%;
-}
-
-.arrow-down::after {
     width: .425em;
     height: .425em;
     border-bottom: .125em solid white;
@@ -62,19 +45,10 @@
     margin-right: auto;
     left: 0;
     right: 0;
+    bottom: 1em;
+    font-size: 2.3rem;
 }
 
-.arrow-down::before {
-    width: .125em;
-    height: 1.4em;
-    background: white;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-}
-
-.small-banner {
-    height: 55%;
-    font-size: 1.6rem;
+.arrow:hover {
+    cursor: pointer;
 }
