Switched from language switch to button

--- a/style.css
+++ b/style.css
@@ -13,28 +13,16 @@ html, body {
 .lang-switch {
     position: absolute;
     font-size: .9rem;
-    height: 1em;
-    width: 2.5em;
+    height: 1.4em;
+    width: 1.6em;
     margin: 1em;
-    border-radius: 1em;
+    border-radius: .3em;
     border: .15em solid white;
     z-index: 1;
-}
-
-.lang-switch::after {
-    content: '';
-    position: absolute;
-    background-color: white;
-    width: .7em;
-    height: .7em;
-    border-radius: 1em;
-    margin: .133em;
-    left: 0;
-    transition: left .3s ease;
-}
-
-.active-switch::after {
-    left: 1.55em;
+    padding: 0 .3em;
+    color: white;
+    user-select: none;
+    cursor: pointer;
 }
 
 .fade-in {
