--- a/global/banner.css
+++ b/global/banner.css
@@ -1,4 +1,4 @@
-.banner {
+.bnr {
     width: 100%;
     height: 100%;
     color: white;
@@ -9,7 +9,7 @@
     position: relative;
 }
 
-.banner img {
+.bnr img {
     position: fixed;
     left: 0;
     z-index: -1;
@@ -18,34 +18,20 @@
     object-fit: cover;
 }
 
-.banner h1 {
+.bnr-content {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
     user-select: text;
-    font-size: 3vw;
+    font-size: 1.8rem;
 }
 
-.small-banner {
+.bnr-content h1 {
+    margin-bottom: 1.2rem;
+    font-size: 2.15em;
+}
+
+.sml-bnr {
     height: 55%;
     font-size: 1.6rem;
-}
-
-.arrow {
-    position: absolute;
-    width: .425em;
-    height: .425em;
-    border-bottom: .125em solid white;
-    border-left: .125em solid white;
-    transform: rotate(-45deg);
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    bottom: 1em;
-    font-size: 2.3rem;
-}
-
-.arrow:hover {
-    cursor: pointer;
 }
