--- a/experience/style.css
+++ b/experience/style.css
@@ -1,16 +1,22 @@
-.bnr {
-    filter:
-        brightness(40%)
-        sepia(100%)
-        hue-rotate(190deg)
-        saturate(75%);
+.img-wrap {
     position: absolute;
     z-index: -1;
-    left: 0;
-    top: -650px;
-    width: 100%;
+    height: 300%;
     margin: 0;
     user-select: none;
+    width: 100%;
+    overflow: hidden;
+}
+
+.bg-img {
+    position: absolute;
+    height: 220%;
+    width: 100%;
+    object-fit: cover;
+    top: -75%;
+    filter:blur(6px);
+    border: 10px solid black;
+    left: -10px;
 }
 
 .timeline {
@@ -63,4 +69,8 @@
 .point-left::before {
     right: -4.5rem;
     left: auto;
+}
+
+.point:focus::before {
+    background-color: white;
 }
