--- a/experience/style.css
+++ b/experience/style.css
@@ -1,3 +1,15 @@
+html, body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+}
+
+::selection {
+    background-color: #1E28416F;
+}
+
 .img-wrap {
     position: absolute;
     z-index: -1;
@@ -14,13 +26,14 @@
     width: calc(100% + 20px);
     object-fit: cover;
     top: -75%;
-    filter:blur(6px);
+    filter: blur(6px) brightness(50%);
     left: -10px;
 }
 
 .timeline {
-    background-color: cyan;
-    height: 100rem;
+    --timeline-color: #1BB8E4;
+    background-color: var(--timeline-color);
+    height: 205%;
     width: .2rem;
     margin-left: auto;
     margin-right: auto;
@@ -41,7 +54,7 @@
 
 .point h4 {
     margin: 0;
-    color: cyan;
+    color: var(--timeline-color);
 }
 
 .point h2 {
@@ -59,7 +72,7 @@
     content: '';
     width: 1.2rem;
     height: 1.2rem;
-    background-color: cyan;
+    background-color: var(--timeline-color);
     border-radius: 100%;
     position: absolute;
     left: -4.5rem;
@@ -68,8 +81,4 @@
 .point-left::before {
     right: -4.5rem;
     left: auto;
-}
-
-.point:focus::before {
-    background-color: white;
 }
