Changed the background on the experience page

--- a/experience/style.css
+++ b/experience/style.css
@@ -22,12 +22,13 @@ html, body {
 
 .bg-img {
     position: absolute;
-    height: 220%;
-    width: calc(100% + 20px);
+    height: 105%;
+    top: -2.5%;
+    width: 105%;
+    left: -2.5%;
     object-fit: cover;
-    top: -75%;
-    filter: blur(6px) brightness(50%);
-    left: -10px;
+    object-position: 50% 50%;
+    filter: brightness(50%);
 }
 
 .timeline {
