--- a/banner.css
+++ b/banner.css
@@ -1,4 +1,4 @@
-.bnr {
+banner {
     width: 100%;
     height: 100%;
     color: white;
@@ -9,16 +9,21 @@
     position: relative;
 }
 
-.bnr img {
+banner img {
     position: fixed;
     left: 0;
     z-index: -1;
     height: 100%;
     width: 100%;
     object-fit: cover;
+    filter: brightness(70%);
+    -webkit-filter: brightness(70%);
+    -moz-filter: brightness(70%);
+    -o-filter: brightness(70%);
+    -ms-filter: brightness(70%);
 }
 
-.bnr-content {
+content {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -26,12 +31,7 @@
     font-size: 1.8rem;
 }
 
-.bnr-content h1 {
+content h1 {
     margin-bottom: 1.2rem;
     font-size: 2.15em;
-}
-
-.sml-bnr {
-    height: 55%;
-    font-size: 1.6rem;
 }
