--- a/experience/style.css
+++ b/experience/style.css
@@ -4,10 +4,13 @@ html, body {
     height: 100%;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 400;
+    background-color: #020815;
+    z-index: -2;
+    position:absolute;
 }
 
 ::selection {
-    background-color: #354366af;
+    background-color: #42537FBF;
 }
 
 .content {
@@ -36,11 +39,11 @@ html, body {
     width: 100%;
     object-fit: cover;
     object-position: 50% 50%;
-    filter: brightness(60%) grayscale(30%);;
-    -webkit-filter: brightness(60%) grayscale(30%);;
-    -moz-filter: brightness(60%) grayscale(30%);;
-    -o-filter: brightness(60%) grayscale(30%);;
-    -ms-filter: brightness(60%) grayscale(30%);;
+    filter: brightness(40%) grayscale(30%);
+    -webkit-filter: brightness(40%) grayscale(30%);
+    -moz-filter: brightness(40%) grayscale(30%);
+    -o-filter: brightness(40%) grayscale(30%);
+    -ms-filter: brightness(40%) grayscale(30%);
     z-index: -1;
     user-select: none;
 }
