--- a/style.css
+++ b/style.css
@@ -1,23 +1,137 @@
 html, body {
     width: 100%;
     height: 100%;
-    margin: 0;
     font-family: 'Montserrat', Helvetica, sans-serif;
     font-weight: 400;
-    background-color: #161C2BAF;
-    z-index: -2;
-    position:absolute;
+    margin: 0;
+    background-color: #1C1C1C;
+    color: #FFF;
 }
 
-::selection {
+/*::selection {
     background-color: #161C2BBF;
-}
+}*/
 
 .fade-in {
-    animation: fadeIn 2000ms;
+    animation: fadeIn 1000ms;
 }
 
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
+}
+
+.banner {
+    width: 100%;
+    height: 100%;
+    user-select: none;
+    overflow: hidden;
+}
+
+.banner-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(80%) blur(2px);
+}
+
+.content-wrapper {
+    position: absolute;
+    width: 100%;
+    height: fit-content;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+}
+
+.content {
+    font-size: 2rem;
+    width: fit-content;
+    height: fit-content;
+    text-align: left;
+    float: right;
+    user-select: text;
+    margin-right: 18%;
+    /*Duration added by JavaScript*/
+    transition: ease margin font-size;
+}
+
+@media only screen and (max-width: 1500px) {
+    .content {
+        margin-right: 8%;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 1150px) {
+    .content {
+        margin-right: calc(50% - (517.667px / 2));
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .content {
+        font-size: 1rem;
+        margin-right: calc(50% - (258.883px / 2));
+        text-align: center;
+    }
+}
+
+.content h1 {
+    font-size: 2em;
+    font-weight: 600;
+    margin-bottom: .8rem;
+}
+
+.content span {
+    font-size: 1em;
+    font-weight: 400;
+}
+
+.banner-arrow {
+    font-size: 2.8rem;
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 1.2em;
+    width: 1em;
+    height: 1em;
+    cursor: pointer;
+}
+
+h1 {
+    font-size: 3rem;
+    text-align: center;
+}
+
+.project {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 8em 0;
+}
+
+.project img {
+    display: inline-block;
+    width: 40%;
+    margin: 0 5%;
+}
+
+.project span {
+    font-size: 1.5em;
+    display: inline-block;
+    width: 40%;
+    margin: 0 5%;
+}
+
+.bottom-padding {
+    width: 100%;
+    height: 12rem;
 }
