Overhaul of all the learning pages

--- a/learning/binary/style.css
+++ b/learning/binary/style.css
@@ -1,14 +1,9 @@
-.content-wrapper {
-    background-color: #000;
-}
-
 #slider-value {
-    width: 12ch;
+    width: 7ch;
 }
 
 #indicator {
-    font-size: 0.6em;
     position: absolute;
-    bottom: 0.3em;
-    right: 0.6em;
+    right: .5rem;
+    bottom: .2rem;
 }
