--- a/learning/kvadratsettning/style.css
+++ b/learning/kvadratsettning/style.css
@@ -1,7 +1,5 @@
-.content-wrapper {
-    background-color: #245c4f;
-}
-
-#potens {
-    position: absolute;
+@media only screen and (max-width: 400px) {
+    #display {
+        font-size: 3em;
+    }
 }
