--- a/learning/hexadecimal/style.css
+++ b/learning/hexadecimal/style.css
@@ -1,16 +1,5 @@
-.content-wrapper {
-    background-color: #D57309;
-}
-
-.slider-value-wrapper {
-    width: 24ch;
-}
-
 #slider-value {
-    margin: 0 0 0 0.4em;
     width: 4ch;
-    text-align: center;
-    margin-right: 0.2em;
     background-color: #1C1C1C;
     color: #FFF;
     border: 0.01em solid #888;
@@ -18,29 +7,14 @@
     padding: 0.2em 0.35em;
 }
 
-#slider-value:focus {
-    outline: none;
-}
-
-#help {
-    font-size: 0.9em;
-    margin: 0;
-    width: 20em;
-}
-
 #table {
     position: absolute;
-    right: -8.5em;
+    right: -6.5em;
+    top: 0;
     display: grid;
     grid-template-columns: [first] 50% [line2] 50% [end];
     grid-template-rows: [row1-start] auto [row1-end] auto [third-line] auto [last-line];
     height: 100%;
     overflow-y: scroll;
     padding-right: 1em;
-}
-
-#table span {
-    border: 0.1em solid white;
-    padding: 0.5em;
-    text-decoration-color: #F00;
 }
