--- a/learning/learning.css
+++ b/learning/learning.css
@@ -1,92 +1,87 @@
 html, body {
     font-family: 'Montserrat', Helvetica, sans-serif;
     font-weight: 400;
+    margin: 0;
     background-color: #1C1C1C;
-    color: #FFF;
+    color: #FFFFFF;
+    font-size: 1.2rem;
 }
 
-.outside-wrapper {
+@media only screen and (max-width: 550px) {
+    html, body {
+        font-size: 1rem;
+    }
+    .container {
+        aspect-ratio: inherit !important;
+    }
+}
+
+.wrapper {
     position: absolute;
-    width: fit-content;
-    height: fit-content;
     margin: auto;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    width: fit-content;
+    height: fit-content;
 }
 
-.inside-wrapper {
-    display: flex;
-    flex-direction: column;
+.container {
+    width: 40rem;
+    aspect-ratio: 6 / 3;
+    max-width: 90dvw;
+    border-radius: .8em;
+}
+
+#score {
+    font-size: 1.2rem;
+    padding: 1rem;
 }
 
 .content-wrapper {
-    font-size: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     width: 100%;
     height: 100%;
-    padding: 1.25em 2.5em;
     text-align: center;
-    color: #FFF;
-    border-radius: 0.5em;
+    padding-bottom: 2rem;
 }
 
-#score-count {
-    font-size: 0.75em;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-}
-
-#respons {
-    font-size: 0.9em;
-    margin: 0;
-    margin-bottom: 0.5em;
-    width: 20em;
+#info {
+    font-size: 1.2em;
 }
 
 #display {
-    margin: 0;
+    font-size: 4em;
 }
 
 #form input {
-    margin: 0.5em;
-    font-size: 0.75em;
+    margin: .5em .2em;
+    font-size: 1.2em;
 }
 
-#timer-display {
-    font-size: 0.75em;
-}
-
-.slider-container {
+#slider-container {
+    font-size: .8rem;
     position: absolute;
+    width: 100%;
+    top: -1.8em;
     display: flex;
-    right: 0;
-    top: -2em;
-    width: 100%;
+    gap: .5rem;
+    justify-content: flex-end;
 }
 
-.slider-container span {
-    margin-right: 0.4em;
-    white-space:nowrap;
+#slider-container input {
+    height: 1em;
 }
 
-#slider-value {
-    margin: 0 0 0 0.4em;
-    width: 1ch;
-}
-
-.slider-container .devider {
-    height: 100%;
-    width: 100%;
+#slider-hex {
+    width: 6ch;
 }
 
 .checkboxes {
-    font-size: 1.2em;
-    margin-top: .5em;
-}
-
-.checkboxes input {
-    height: 1.2em;
-    width: 1.2em;
-    margin-right: 1em;
+    font-size: .8rem;
+    position: absolute;
 }
