--- a/text/style.css
+++ b/text/style.css
@@ -13,7 +13,7 @@ html, body {
     height: 100%;
     display: grid;
     grid-template-columns: auto [first] 20rem [end] auto;
-    grid-template-rows: auto [first] 2rem 1rem 2rem 1.5rem 2rem [end] auto;
+    grid-template-rows: auto [first] 2rem 1rem 2rem 1.5rem [end] auto;
 }
 
 #length-display {
