--- a/tools/commonfactor/style.css
+++ b/tools/commonfactor/style.css
@@ -13,7 +13,7 @@ html, body {
     height: 100%;
     display: grid;
     grid-template-columns: auto [first] 20rem [end] auto;
-    grid-template-rows: auto [first] 2rem 1rem 2rem 1.5rem [end] auto;
+    grid-template-rows: auto [first] 2rem 1rem 2rem 1.5rem 2rem [end] auto;
 }
 
 #text {
@@ -30,5 +30,11 @@ html, body {
 #factors-display {
     grid-column: 2;
     grid-row: 6;
+    text-align: center;
+}
+
+#prime-display {
+    grid-column: 2;
+    grid-row: 7;
     text-align: center;
 }
